--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div id="wrapper">
     	<div class="content">
-			<a href="http://cloudmego.com/file/c29118">Download</a>
+			<a href="http://cloudmego.com/file/c29118" class="content__btn">Download</a>
         </div>
     </div>
 </body>
